@@ -1,73 +1,44 @@
 package com.ehb.connected.domain.impl.projects.mappers;
 
-import com.ehb.connected.domain.impl.assignments.entities.Assignment;
-import com.ehb.connected.domain.impl.assignments.repositories.AssignmentRepository;
 import com.ehb.connected.domain.impl.projects.dto.ProjectDetailsDto;
-import com.ehb.connected.domain.impl.projects.dto.ProjectUpdateDto;
 import com.ehb.connected.domain.impl.projects.dto.ProjectCreateDto;
 import com.ehb.connected.domain.impl.projects.entities.Project;
 import com.ehb.connected.domain.impl.tags.mappers.TagMapper;
 import com.ehb.connected.domain.impl.users.mappers.UserDetailsMapper;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class ProjectMapper {
     private final TagMapper tagMapper;
     private final UserDetailsMapper userMapper;
-    private final AssignmentRepository assignmentRepository;
 
-    public ProjectMapper(TagMapper tagMapper, UserDetailsMapper userMapper, AssignmentRepository assignmentRepository) {
-        this.tagMapper = tagMapper;
-        this.userMapper = userMapper;
-        this.assignmentRepository = assignmentRepository;
-    }
 
     public List<ProjectDetailsDto> toDetailsDtoList(List<Project> projects) {
-        if (projects == null || projects.isEmpty()) {
-            return List.of();
-        }
-        return projects.stream()
-                .map(this::toDetailsDto)
-                .collect(Collectors.toList());
+        return projects.stream().map(this::toDetailsDto).toList();
     }
 
     public ProjectDetailsDto toDetailsDto(Project project) {
-        if (project == null) {
-            return null;
-        }
-
-        ProjectDetailsDto dto = new ProjectDetailsDto();
-        dto.setId(project.getId());
-        dto.setTitle(project.getTitle());
-        dto.setDescription(project.getDescription());
-        dto.setShortDescription(project.getShortDescription());
-        dto.setStatus(project.getStatus().name());
-        dto.setRepositoryUrl(project.getRepositoryUrl());
-        dto.setBoardUrl(project.getBoardUrl());
-        dto.setBackgroundImage(project.getBackgroundImage());
-
-        if (project.getAssignment() != null) {
-            dto.setAssignmentId(project.getAssignment().getId());
-        }
-
-        if (project.getTags() != null) {
-            dto.setTags(project.getTags().stream().map(tagMapper::toDto).collect(Collectors.toList()));
-        } else {
-            dto.setTags(List.of());
-        }
-
-        dto.setCreatedBy(userMapper.toUserDetailsDto(project.getCreatedBy()));
-
-        if (project.getMembers() != null) {
-            dto.setMembers(project.getMembers().stream().map(userMapper::toUserDetailsDto).collect(Collectors.toList()));
-        } else {
-            dto.setMembers(List.of());
-        }
-
-        return dto;
+        return new ProjectDetailsDto(
+                project.getId(),
+                project.getTitle(),
+                project.getDescription(),
+                project.getShortDescription(),
+                project.getStatus(),
+                project.getRepositoryUrl(),
+                project.getBoardUrl(),
+                project.getBackgroundImage(),
+                project.getTeamSize(),
+                project.getAssignment() != null ? project.getAssignment().getId() : null,
+                project.getTags() != null ? project.getTags().stream().map(tagMapper::toDto).collect(Collectors.toList()) : Collections.emptyList(),
+                userMapper.toUserDetailsDto(project.getCreatedBy()),
+                project.getMembers() != null ? project.getMembers().stream().map(userMapper::toUserDetailsDto).collect(Collectors.toList()) : Collections.emptyList()
+        );
     }
 
     public Project toEntity(ProjectCreateDto dto) {
@@ -77,26 +48,10 @@ public class ProjectMapper {
         project.setShortDescription(dto.getShortDescription());
         project.setRepositoryUrl(dto.getRepositoryUrl());
         project.setBoardUrl(dto.getBoardUrl());
+        project.setTeamSize(dto.getTeamSize());
         project.setBackgroundImage(dto.getBackgroundImage());
-        project.setTags(dto.getTags());
-
-        Assignment assignment = assignmentRepository.findById(dto.getAssignmentId())
-                .orElseThrow(() -> new IllegalArgumentException("Assignment not found"));
-        project.setAssignment(assignment);
+        project.setTags(tagMapper.toEntityList(dto.getTags()));
 
         return project;
-    }
-
-    public void updateEntity(ProjectUpdateDto dto, Project project) {
-        if (dto == null || project == null) {
-            return;
-        }
-
-        project.setTitle(dto.getTitle());
-        project.setDescription(dto.getDescription());
-        project.setShortDescription(dto.getShortDescription());
-        project.setRepositoryUrl(dto.getRepositoryUrl());
-        project.setBoardUrl(dto.getBoardUrl());
-        project.setBackgroundImage(dto.getBackgroundImage());
     }
 }
